refactor: complete production audit, remove mock data, and optimize Gemini performance